platform/test/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  namespace: test
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: haproxy
  tls:
  - hosts:
    - hello.k8s.rcrumana.xyz
    secretName: hello-world-server-tls
  rules:
  - host: hello.k8s.rcrumana.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world
            port:
              number: 80
